[Bianca]- layouting investor for moment done

--- a/src/components/PersonalDetail/persoaldetail.scss
+++ b/src/components/PersonalDetail/persoaldetail.scss
@@ -45,6 +45,7 @@
         .input__photo{
             border-radius:none;
             border-color: white;
+            margin-bottom: 30px;
         }
 
         .input__photosubmit{
