--- a/src/components/footercomponent.scss
+++ b/src/components/footercomponent.scss
@@ -9,22 +9,96 @@
 .footer {
   background: black;
   padding: 1rem;
-  color: #c4c4c4;
+  color: #ffffff;
+  
+
+  span {
+    font-size: 20px;
+    padding-top: 40px;
+    font-weight: 900;
+  }
+
+  p {
+    margin-top: 15px;
+    font-size: 14px;
+  }
+
+  .fa {
+    margin-top: 20px;
+    margin-right: 20px;
+    font-size: 20px;
+    color: #fff;
+    border-radius: 80%;
+    box-shadow: 0px 16px 32px 0px rgba(212, 212, 212, 0.2);
+    border: 1px solid #fff;
+    padding:10px;
+  }
 }
 
 .footer-link {
   list-style-type: none;
+
+  h5{
+    font-size: 16px;
+    font-weight: 900;
+    margin-top: 5px;
+    margin-bottom: 20px;
+  }
 }
 
-.footer-link li {
-  margin: 0.2em 0;
+.footer-link {
+  list-style-type: none;
+
+  h5{
+    font-size: 16px;
+    font-weight: 900;
+    margin-top: 5px;
+    margin-bottom: 20px;
+  }
+
+  li {
+    margin: 0.2em 0;
+    font-size: 14px;
+
+    &:hover {
+      color: #ffffff;
+      cursor: pointer;
+      text-decoration: underline;
+      -webkit-transition: all 0.3s ease-out 0s;
+    transition: all 0.3s ease-out 0s;
+    color: #FE8264;
+    text-decoration: none;
+    }
+  }
 }
 
-.footer-link li:hover {
-  color: #ffffff;
-  cursor: pointer;
-  text-decoration: underline;
+.footer-important {
+  list-style-type: none;
+
+  h5{
+    font-size: 16px;
+    font-weight: 900;
+    margin-top: 5px;
+    margin-bottom: 20px;
+  }
+
+  li {
+    margin: 0.2em 0;
+    font-size: 14px;
+
+    &:hover {
+      color: #ffffff;
+      cursor: pointer;
+      text-decoration: underline;
+      -webkit-transition: all 0.3s ease-out 0s;
+    transition: all 0.3s ease-out 0s;
+    color: #FE8264;
+    text-decoration: none;
+    }
+  }
 }
+
+
 
 .footer-download-icon {
   color: rgba(225, 225, 225, 75%);
@@ -38,9 +112,10 @@
 }
 
 .footer-brand {
-  background: #302b63;
+  background: black;
   text-align: center;
   display: flex;
   align-items: center;
   justify-content: center;
+  border-top: 2px solid white;
 }
