--- a/src/components/home/WhyUs.scss
+++ b/src/components/home/WhyUs.scss
@@ -30,7 +30,8 @@
                 width: 50%;
 
                 img {
-                    padding: 20px 0px 30px 0px;
+                    padding: 20px 0px 20px 0px;
+                    width: 28%;
                 }
 
                 h3 {
