--- a/src/components/detail/detailcomponent.scss
+++ b/src/components/detail/detailcomponent.scss
@@ -1,3 +1,17 @@
 .detail-font {
   text-align: center;
 }
+
+.breadcump {
+  background-color: white;
+}
+
+.breadcrumb {
+  display: flex;
+  flex-wrap: wrap;
+  padding: .75rem 1rem;
+  margin-bottom: 1rem;
+  list-style: none;
+  background-color: #ffffff;
+  border-radius: .25rem;
+}
