--- a/src/components/detail/tabcomponent.scss
+++ b/src/components/detail/tabcomponent.scss
@@ -1,7 +1,87 @@
 .tab-box {
   box-sizing: 12rem;
+  border-color: white;
+}
+
+.price__star {
+  display: flex;
+  margin-bottom: 10px;
+  .star {
+    padding-left: 30px;
+    color: yellow;
+    letter-spacing: 0.3rem;
+  }
+}
+
+h4 {
+  font-size: 20px;
 }
 
 .tab-content {
-  height: 404px;
+  height: 40vh;
+  border-color: white;
+  padding: 10px 10px 10px 0px;
+
+  p {
+    font-size: 14px;
+    color: #686868;
+  }
+
+  .identity {
+    margin-bottom: 0px;
+    border-top: 2px solid rgb(233, 231, 231);
+
+    p{
+      padding-top: 10px;
+      margin-bottom: 0px;
+    }
+  }
+
+  .input-lot {
+    padding-top: 20px;
+
+    input {
+      border-radius: 10px;
+      border-color: 2px solid red;
+      padding:5px 10px;
+      margin: 0px 20px;
+      width: 20%;
+    }
+
+    span {
+      background-color: black;
+      color: white;
+      border-radius: 50%;
+      padding: 5px 13px;
+      align-items: center;
+    }
+  }
+  
 }
+
+
+.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
+  color: #495057;
+  border: none;
+  border-bottom: 3px solid #7fcaa7;
+  animation: 4s;
+  cursor: pointer;
+}
+
+.btn-invest {
+  text-align: left;
+  margin-top: 20px;
+
+    button {
+      background-color: #4da974;
+    padding: 10px 20px;
+    border-radius: 10px;
+    border-color: white;
+    color: white;
+    width: 100%;
+    border: none;
+    }
+}
+
+
+
