--- a/src/components/home/Stepinvest.scss
+++ b/src/components/home/Stepinvest.scss
@@ -1,12 +1,12 @@
 .container__stepinvest {
     width: 100%;
     height: 100vh;
-    padding: 75px 100px;
+    padding: 0px 100px 0px 100px;
     display: flex;
     margin-bottom: 100px;
 
     .container__stepinvest__left{
-        width: 40%;
+        width: 70%;
         padding-top: 100px;
 
         h1 {
@@ -17,7 +17,7 @@
         }
         p {
             color: #949494;
-            margin-bottom: 30px;
+            margin-bottom: 10px;
             font-size: 15px;
             line-height: 25px;
         }
@@ -176,7 +176,7 @@
     }
 
     .container__stepinvest__right{
-        width: 80%;
+        width: 100%;
         display: flex;
         flex-wrap: wrap;
 
@@ -193,35 +193,38 @@
     }
 
     .container__stepinvest__content{
-        text-align: left;
+        text-align: center;
         width: 40%;
         margin-left: 40px;
-        margin-top: 20px;
+        padding: 5px 10px;
 
         h1 {
+
             font-size: 20px;
-            font-weight: 500;
+            font-weight: 600;
         }
         p{
             font-size: 14px;
             color: #949494;
+            margin-bottom: 0px;
         }
 
         img {
-            color: red;
+            width: 30%;
+            margin-bottom: 25px;
         }
 
         .container__stepinvest__content__padding {
-            margin-left: 20px;
+            margin-left: 5px;
         }
 
-        &:hover {
-            box-shadow: 0 7px 20px rgba(0, 0, 0, 0.3);
-            -webkit-transform: translateY(-5px);
-            transform: translateY(-5px);
-            transition: 0.3s;
-            padding-top: 10px;
-            border-radius: 10px;
-        }
+        // &:hover {
+        //     box-shadow: 0 7px 20px rgba(0, 0, 0, 0.3);
+        //     -webkit-transform: translateY(-5px);
+        //     transform: translateY(-4px);
+        //     transition: 0.3s;
+        //     padding-top: 10px;
+        //     border-radius: 10px;
+        // }
     }
 }
