--- a/src/components/home/cardcomponent.scss
+++ b/src/components/home/cardcomponent.scss
@@ -8,13 +8,36 @@
   cursor: pointer;
 }
 
-.card-item-single {
-  border-radius: 2%;
-}
-
 .card-item-single img {
-  border-radius: 2%;
-  max-width: 100%;
+ height: 40vh;
+}
+.card-item-single {
+  box-shadow: 0em 0em #ffffff;
+
+  &:hover {
+    opacity: 0.7;
+  }
+
+ }
+
+.card-body {
+  height: 23vh;
+
+
+  p {
+    color: #217d38;
+    font-size: 12px;
+    font-weight: 700;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    // white-space: nowrap;
+    width: 100%;
+    height: 100px;
+  }
+
+  h3 {
+    font-size: 20px;
+  }
 }
 
 .card-footer-text i,
