--- a/src/components/PersonalDetail/persoaldetail.scss
+++ b/src/components/PersonalDetail/persoaldetail.scss
@@ -85,10 +85,140 @@
        }
 
        .contact__information {
-           margin-top: 50px;
+           margin-top: 100px;
        }
 
     }
 }
+
+.container__profile {
+    padding: 100px;
+    height: 130vh;
+
+    h3 {
+        margin-bottom: 20px;
+        padding-bottom: 15px;
+        border-bottom: 1px solid #e1e1e1;
+    }
+}
+
+.profile__pic {
+    text-align: center;
+    img {
+        width: 30%;
+        border-radius: 50%;
+        margin: 0px 60px;
+    }
+
+    p {
+        margin-top: 20px;
+    }
+}
+
+.nav-pills .nav-link.active {
+    background-color: #3A7D39;
+    color:white;
+}
+
+.container__photos {
+    padding: 20px 0px;
+
+    h4 {
+        font-weight: 650;
+        letter-spacing: 1.5px;
+        background-color: #a8a8a8;
+        color: white;
+        padding: 7px 15px;
+        width: 60%;
+        border-radius: 5px;
+    }
+    
+    form {
+        display: flex;
+        margin-bottom: 20px;
+        
+        img{
+            margin-top: 20px;
+            width: 20%;
+            border-radius: 50% ;
+        }
+
+        input {
+            margin-top: 60px;
+            padding: 20px;
+            text-align: center;
+        }
+    }
+}
+
+.personal__information {
+    
+    h4 {
+        font-weight: 700;
+        letter-spacing: 0.15rem;
+        margin-bottom: 20px;
+        background-color: #a8a8a8;
+        color: white;
+        padding: 7px 15px;
+        width: 70%;
+        border-radius: 5px;
+    }
+}
+
+.contact__information {
+    h4 {
+        margin-top: 50px;
+    }
+}
+
+.container__contentbar {
+    padding: 0px 0px 0px 75px;
+}
+
+.investmentstatus__container {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    border-bottom: 1px solid #e1e1e1;
+    padding-bottom: 20px;
+    text-transform: uppercase;
+    font-weight: 700;
+    color: rgba(78, 76, 76, 0.467)
+}
+
+.investmentstatus__content {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    border-bottom: 1px solid #e1e1e1;
+    padding-bottom: 20px;
+    text-transform: uppercase;
+    font-weight: 700;
+    color: black;
+    margin-top: 20px;
+
+    .invest_payoff {
+        background-color: green;
+        padding: 5px 20px;
+        color: white;
+        border-radius: 20px;
+    }
+
+    .invest_payoff {
+        background-color: green;
+        padding: 5px 20px;
+        color: white;
+        border-radius: 20px;
+    }
+
+    .invest_payoffs {
+        background-color: red;
+        padding: 5px 20px;
+        color: white;
+        border-radius: 20px;
+    }
+}
+
+
 
 
