--- a/src/components/detail/tabcomponent.scss
+++ b/src/components/detail/tabcomponent.scss
@@ -37,6 +37,10 @@ h4 {
     }
   }
 
+  .grafik {
+    width: 79%;
+  }
+
   .input-lot {
     padding-top: 20px;
 
@@ -73,13 +77,29 @@ h4 {
   margin-top: 20px;
 
     button {
-      background-color: #4da974;
-    padding: 10px 20px;
-    border-radius: 10px;
-    border-color: white;
+      position: relative;
     color: white;
-    width: 100%;
-    border: none;
+    background: #fe8264;
+    font-size: 16px;
+    font-weight: 500;
+    text-transform: capitalize;
+    border: 0px solid #fe8264;
+    margin-top: 14px;
+    display: inline-block;
+    border-radius: 0;
+    box-shadow: 0px 8px 16px 0px rgba(254, 130, 100, 0.3);
+    padding: 10px 30px;
+    letter-spacing: 1px;
+    border-radius: 5px;
+
+    &:hover{
+      opacity: 0.6;
+      background-color: #4da974;
+      border-color: white;
+      color: white;
+      text-decoration: none;
+    }
+    
     }
 }
 
