--- a/src/components/home/Slider/Slider.scss
+++ b/src/components/home/Slider/Slider.scss
@@ -49,10 +49,16 @@
         display: inline-block;
         border-radius: 0;
         box-shadow: 0px 8px 16px 0px rgba(254, 130, 100, 0.3);
-        padding: 10px 20px;
+        padding: 20px 40px;
         letter-spacing: 1px;
-        border-radius: 30px;
+        border-radius: 5px;
         margin-left: 150px;
+
+        &:hover {
+          color: #fff;
+          background-color: #27ae93;
+          border-color: #27ae93;
+        }
         
     }
     }
