--- a/src/components/breeder/Breeder.scss
+++ b/src/components/breeder/Breeder.scss
@@ -158,4 +158,41 @@
         }
         
     }
+
+    .form__personalinformation {
+        background-color: rgb(255, 255, 255);
+        box-shadow: 0 1px 4px 0 rgba(0,0,0,.4);
+    padding: 24px 24px 8px;
+
+        h4 {
+            font-weight: 700;
+            margin-bottom: 20px;
+        }
+    }
+
+    .contact__information {
+        margin-top: 30px;
+        box-shadow: 0 1px 4px 0 rgba(0,0,0,.4);
+        padding: 24px 24px 8px;
+        h4 {
+            font-weight: 700;
+            margin-bottom: 20px;
+        }
+    }
+
+    .Livestock__information {
+        margin-top: 30px;
+        box-shadow: 0 1px 4px 0 rgba(0,0,0,.4);
+        padding: 24px 24px 8px;
+        h4 {
+            font-weight: 700;
+            margin-bottom: 20px;
+        }
+    }
+
+    .btn-submit {
+        margin-top: 30px;
+    }
+
+    
 }
