--- a/src/components/detail/tabcomponent.scss
+++ b/src/components/detail/tabcomponent.scss
@@ -30,8 +30,9 @@ h4 {
   .identity {
     margin-bottom: 0px;
     border-top: 2px solid rgb(233, 231, 231);
+    display: block;
 
-    p{
+    p {
       padding-top: 10px;
       margin-bottom: 0px;
     }
@@ -43,7 +44,7 @@ h4 {
     input {
       border-radius: 10px;
       border-color: 2px solid red;
-      padding:5px 10px;
+      padding: 5px 10px;
       margin: 0px 20px;
       width: 20%;
     }
@@ -56,11 +57,10 @@ h4 {
       align-items: center;
     }
   }
-  
 }
 
-
-.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
+.nav-tabs .nav-item.show .nav-link,
+.nav-tabs .nav-link.active {
   color: #495057;
   border: none;
   border-bottom: 3px solid #7fcaa7;
@@ -69,19 +69,21 @@ h4 {
 }
 
 .btn-invest {
+  display: block;
   text-align: left;
   margin-top: 20px;
 
-    button {
-      background-color: #4da974;
+  button {
+    background-color: #4da974;
     padding: 10px 20px;
     border-radius: 10px;
     border-color: white;
     color: white;
     width: 100%;
     border: none;
-    }
+  }
 }
 
-
-
+.control-button {
+  cursor: pointer;
+}
