--- a/src/components/detail/tabcomponent.scss
+++ b/src/components/detail/tabcomponent.scss
@@ -18,7 +18,9 @@ h4 {
 }
 
 .tab-content {
-  height: 40vh;
+  // height: 40vh;
+  overflow-y: auto;
+  overflow-x: visible;
   border-color: white;
   padding: 10px 10px 10px 0px;
 
@@ -72,6 +74,7 @@ h4 {
   display: block;
   text-align: left;
   margin-top: 20px;
+  cursor: pointer;
 
   button {
     background-color: #4da974;
