--- a/src/components/detail/tabcomponent.scss
+++ b/src/components/detail/tabcomponent.scss
@@ -76,7 +76,7 @@ h4 {
   text-align: left;
   margin-top: 20px;
 
-    button {
+    a {
       position: relative;
     color: white;
     background: #fe8264;
