--- a/src/components/paymentresume/paymentresume.scss
+++ b/src/components/paymentresume/paymentresume.scss
@@ -165,8 +165,8 @@
         .total__button {
             margin-left: 160px;
             
-            button {
-    margin: 0 22px 0 15px;
+            a {
+    margin: 100px 22px 0 15px;
     text-transform: capitalize;
     font-weight: 300;
     height: 2.5rem;
@@ -178,16 +178,12 @@
     align-items: center;
     background-color: #217d38;
     color: white;
+    padding: 10px 20px;
 
                 &:hover {
                     opacity: 0.8;
                 }
             }
         }
-    }
-
-    .breadcump {
-
-    }
-   
+    }   
 }
