--- a/src/components/home/cardcomponent.scss
+++ b/src/components/home/cardcomponent.scss
@@ -46,5 +46,7 @@
 
 .card-footer-text i,
 .card-footer-text span {
-  margin-left: 1rem;
+  margin-left: 0.2rem;
+  font-size: 14px;
+  text-align: center;
 }
