--- a/src/components/detail/tabcomponent.scss
+++ b/src/components/detail/tabcomponent.scss
@@ -30,11 +30,16 @@ h4 {
   .identity {
     margin-bottom: 0px;
     border-top: 2px solid rgb(233, 231, 231);
+    display: block;
 
-    p{
+    p {
       padding-top: 10px;
       margin-bottom: 0px;
     }
+  }
+
+  .grafik {
+    width: 79%;
   }
 
   .input-lot {
@@ -43,7 +48,7 @@ h4 {
     input {
       border-radius: 10px;
       border-color: 2px solid red;
-      padding:5px 10px;
+      padding: 5px 10px;
       margin: 0px 20px;
       width: 20%;
     }
@@ -56,32 +61,49 @@ h4 {
       align-items: center;
     }
   }
-  
 }
 
-
-.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
+.nav-tabs .nav-item.show .nav-link,
+.nav-tabs .nav-link.active {
   color: #495057;
   border: none;
   border-bottom: 3px solid #7fcaa7;
   animation: 4s;
   cursor: pointer;
+  transition: opacity 0.2s ease-in;
 }
 
 .btn-invest {
+  display: block;
   text-align: left;
   margin-top: 20px;
+  cursor: pointer;
 
-    button {
-      background-color: #4da974;
-    padding: 10px 20px;
-    border-radius: 10px;
+  a {
+    position: relative;
+    color: white;
+    background: #fe8264;
+    font-size: 16px;
+    font-weight: 500;
+    text-transform: capitalize;
+    border: 0px solid #fe8264;
+    margin-top: 14px;
+    display: inline-block;
+    border-radius: 0;
+    box-shadow: 0px 8px 16px 0px rgba(254, 130, 100, 0.3);
+    padding: 10px 30px;
+    letter-spacing: 1px;
+    border-radius: 5px;
+  }
+
+  &:hover {
+    opacity: 0.6;
     border-color: white;
     color: white;
-    width: 100%;
-    border: none;
-    }
+    text-decoration: none;
+  }
 }
 
-
-
+.control-button {
+  cursor: pointer;
+}
