--- a/src/components/home/cardcomponent.scss
+++ b/src/components/home/cardcomponent.scss
@@ -9,7 +9,7 @@
 }
 
 .card-item-single img {
- height: 40vh;
+  height: 40vh;
 }
 .card-item-single {
   box-shadow: 0em 0em #ffffff;
@@ -17,26 +17,30 @@
   &:hover {
     opacity: 0.7;
   }
-
- }
+}
 
 .card-body {
-  height: 23vh;
-
+  height: 20vh;
 
   p {
-    color: #217d38;
-    font-size: 12px;
+    color: black;
+    font-size: 20px;
     font-weight: 700;
-    text-overflow: ellipsis;
     overflow: hidden;
     // white-space: nowrap;
     width: 100%;
-    height: 100px;
+    height: 30px;
+    text-align: center;
+    margin-bottom: 10px;
+    padding-top:3px;
+    text-transform: uppercase;
   }
 
   h3 {
     font-size: 20px;
+    margin-top: 10px;
+    background-color: none;
+    color: green;
   }
 }
 
