--- a/src/components/paymentresume/paymentresume.scss
+++ b/src/components/paymentresume/paymentresume.scss
@@ -38,7 +38,7 @@
         }
         
         .product__class {
-            display: flex-end;
+            display: flex;
             width: 45%;
             font-weight: 900;
            
@@ -66,7 +66,7 @@
            width: 50%;
             display: flex;
             align-items: center;
-            justify-content: end;
+            justify-content: flex-end;
 
 
             img {
