--- a/src/components/aboutus/Infographic.scss
+++ b/src/components/aboutus/Infographic.scss
@@ -1,6 +1,6 @@
 .container__data2 {
     width: 100%;
-    height: 60vh;
+    height: 50vh;
     background-image: linear-gradient(to right top, #34c759, #2fb451, #2aa148, #268f40, #217d38);
     padding: 50px 50px;
     display: flex;
@@ -14,12 +14,28 @@
 
         .flex__title {
             display: flex;
+            color: white;
+
+            
             h1 {
-                font-size: 60px;
+                font-size: 40px;
                 display: flex;
                 align-items: center;
                 margin-right: 20px;
                 color: #f3f3f3
+            }
+
+            img {
+                color: white;
+            }
+
+            .container__data__content__padding {
+                padding-left: 30px;
+                margin-left: 5px;
+                width: 100%;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
             }
         }
 
@@ -41,10 +57,7 @@
             margin-bottom: 25px;
         }
 
-        .container__data__content__padding {
-            margin-left: 5px;
-            width: 100%;
-        }
+       
 
     }
 }
