--- a/src/components/aboutus/Ourteam.scss
+++ b/src/components/aboutus/Ourteam.scss
@@ -15,7 +15,8 @@
         padding: 0px 20px;
         img {
             background-color: red;
-            width: 100%;
+            width: 250px;
+            height: 320px;
             border-radius: 5px;
         }
 
