[Adityo S. Nento] - Update Help

--- a/src/components/PersonalDetail/persoaldetail.scss
+++ b/src/components/PersonalDetail/persoaldetail.scss
@@ -1,7 +1,6 @@
 .container__personaldetail {
     padding: 150px 100px;
     display: flex;
-    height: 100vh;
 
     .container__left {
         text-align: center;
@@ -37,7 +36,6 @@
 
     .container__right {
         width: 100%;
-        
 
         img {
             width: 20%;
@@ -95,7 +93,7 @@
 
 .container__profile {
     padding: 100px;
-    height: 170vh;
+    height: 200vh;
 
     h3 {
         margin-bottom: 20px;
@@ -175,6 +173,7 @@
 
 .container__contentbar {
     padding: 0px 0px 0px 75px;
+    
 }
 
 .investmentstatus__container {
@@ -185,7 +184,14 @@
     padding-bottom: 20px;
     text-transform: uppercase;
     font-weight: 700;
-    color: rgba(78, 76, 76, 0.467)
+    color: rgba(78, 76, 76, 0.467);
+    
+    
+}
+
+.investmentstory__container {
+    overflow: scroll;
+    max-height: 600px;
 }
 
 .investmentstatus__content {
@@ -198,6 +204,12 @@
     font-weight: 700;
     color: black;
     margin-top: 20px;
+   
+
+    img {
+        width: 10%;
+    }
+   
 
     .invest_payoff {
         background-color: green;
