--- a/src/components/detail/tabcomponent.scss
+++ b/src/components/detail/tabcomponent.scss
@@ -70,7 +70,7 @@ h4 {
   border-bottom: 3px solid #7fcaa7;
   animation: 4s;
   cursor: pointer;
-  transition: opacity .2s ease-in;
+  transition: opacity 0.2s ease-in;
 }
 
 .btn-invest {
@@ -79,8 +79,8 @@ h4 {
   margin-top: 20px;
   cursor: pointer;
 
-    a {
-      position: relative;
+  a {
+    position: relative;
     color: white;
     background: #fe8264;
     font-size: 16px;
@@ -96,13 +96,12 @@ h4 {
     border-radius: 5px;
   }
 
-    &:hover{
-      opacity: 0.6;
-      border-color: white;
-      color: white;
-      text-decoration: none;
-    }
-    
+  &:hover {
+    opacity: 0.6;
+    border-color: white;
+    color: white;
+    text-decoration: none;
+  }
 }
 
 .control-button {
