[Adityo S. Nento] - Card Footer Edit

--- a/src/components/footercomponent.scss
+++ b/src/components/footercomponent.scss
@@ -7,7 +7,7 @@
 }
 
 .footer {
-  background:#40893D;
+  background: #494848;
   padding: 1rem;
   color: white;
   border-top: 1px solid transparent;
@@ -113,12 +113,12 @@
 }
 
 .footer-brand {
-  background: black;
+  background: #494848;
   text-align: center;
   display: flex;
   align-items: center;
   justify-content: center;
-  border-top: 2px solid black;
+  border-top: 2px solid #494848;
 }
 
 .logos {
