--- a/src/components/Help/Help.scss
+++ b/src/components/Help/Help.scss
@@ -104,7 +104,7 @@
             margin-bottom:10px;
         }
        
-        p {
+        li {
             line-height: 30px;
         }
        }
