--- a/src/components/home/cardcomponent.scss
+++ b/src/components/home/cardcomponent.scss
@@ -15,9 +15,9 @@
   box-shadow: 0em 0em #ffffff;
 
   &:hover {
-    opacity: 0.7;
     -webkit-transition: all 0.3s ease-out 0s;
     transition: all 0.3s ease-out 0s;
+    box-shadow: 0 4px 30px rgba(0,0,0,.4);
   }
 }
 
